Reland #2 "[Android] Convert TabSwitcherSearchTest further to Public Transit"
No changes to the CL, I'll just approve new goldens if needed.
The bot that runs goldens is android-x86-rel and it switched from O to
Q, so the same golden that failed before isn't valid anymore.

This is a reland of commit df4348c08fcad0e13ed31ff210a89cdcecd586b5

Original change's description:
> Reland "[Android] Convert TabSwitcherSearchTest further to Public Transit"
>
> Disable the test on Pie as it seems that a real bug causes the soft
> keyboard to not appear in Pie.
>
> This is a reland of commit 72db8e445a50e7431c7506e697f56006575fd160
>
> Original change's description:
> > [Android] Convert TabSwitcherSearchTest further to Public Transit
> >
> > Bug: 411446145
> > Change-Id: I0c9e23fa42572722c0a420581aedbd9bdbbaced3
> > Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6466985
> > Reviewed-by: Brandon Wylie <wylieb@google.com>
> > Commit-Queue: Henrique Nakashima <hnakashima@chromium.org>
> > Cr-Commit-Position: refs/heads/main@{#1467632}
>
> Cq-Include-Trybots: luci.chromium.try:android-pie-arm64-dbg,android-pie-x86-rel
> Bug: 411446145
> Change-Id: I74a65caf326aa40107b9c22aeccca7ca88ad2221
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6624476
> Reviewed-by: Brandon Wylie <wylieb@google.com>
> Commit-Queue: Henrique Nakashima <hnakashima@chromium.org>
> Cr-Commit-Position: refs/heads/main@{#1472044}

Bug: 411446145
Cq-Include-Trybots: luci.chromium.try:android-pie-arm64-dbg,android-pie-x86-rel
Change-Id: Ie1579eeb0f1220555419397905647f5c54bc6467
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6639871
Reviewed-by: Brandon Wylie <wylieb@google.com>
Commit-Queue: Henrique Nakashima <hnakashima@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1473627}