@@ -4,30 +4,16 @@
 
 package org.chromium.chrome.browser.tasks.tab_management;
 
-import static androidx.test.espresso.Espresso.onView;
-import static androidx.test.espresso.action.ViewActions.click;
-import static androidx.test.espresso.assertion.ViewAssertions.matches;
-import static androidx.test.espresso.matcher.ViewMatchers.isCompletelyDisplayed;
-import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
-import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
-import static androidx.test.espresso.matcher.ViewMatchers.withEffectiveVisibility;
-import static androidx.test.espresso.matcher.ViewMatchers.withId;
-import static androidx.test.espresso.matcher.ViewMatchers.withText;
-
-import static org.hamcrest.Matchers.allOf;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
 
 import static org.chromium.base.ThreadUtils.runOnUiThreadBlocking;
-import static org.chromium.chrome.browser.tasks.tab_management.TabUiTestHelper.getTabSwitcherAncestorId;
 import static org.chromium.ui.base.DeviceFormFactor.PHONE;
 
-import android.view.View;
-import android.view.ViewGroup;
+import android.os.Build;
 
-import androidx.test.espresso.ViewInteraction;
-import androidx.test.espresso.matcher.ViewMatchers.Visibility;
 import androidx.test.filters.LargeTest;
 import androidx.test.filters.MediumTest;
 import androidx.test.platform.app.InstrumentationRegistry;
@@ -38,13 +24,12 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import org.chromium.base.ActivityState;
-import org.chromium.base.ApplicationStatus;
 import org.chromium.base.test.ActivityFinisher;
 import org.chromium.base.test.util.Batch;
 import org.chromium.base.test.util.CallbackHelper;
 import org.chromium.base.test.util.CommandLineFlags;
 import org.chromium.base.test.util.CriteriaHelper;
+import org.chromium.base.test.util.DisableIf;
 import org.chromium.base.test.util.RequiresRestart;
 import org.chromium.base.test.util.Restriction;
 import org.chromium.chrome.browser.ChromeTabbedActivity;
@@ -52,23 +37,21 @@ import org.chromium.chrome.browser.flags.ChromeSwitches;
 import org.chromium.chrome.browser.history.BrowsingHistoryBridge;
 import org.chromium.chrome.browser.history.HistoryItem;
 import org.chromium.chrome.browser.history.HistoryProvider.BrowsingHistoryObserver;
-import org.chromium.chrome.browser.layouts.LayoutType;
 import org.chromium.chrome.browser.tab.Tab;
-import org.chromium.chrome.browser.tabmodel.TabModel;
 import org.chromium.chrome.test.ChromeJUnit4ClassRunner;
 import org.chromium.chrome.test.R;
 import org.chromium.chrome.test.transit.AutoResetCtaTransitTestRule;
 import org.chromium.chrome.test.transit.ChromeTransitTestRules;
 import org.chromium.chrome.test.transit.Journeys;
+import org.chromium.chrome.test.transit.hub.RegularTabSwitcherStation;
 import org.chromium.chrome.test.transit.hub.TabSwitcherSearchStation;
+import org.chromium.chrome.test.transit.hub.TabSwitcherSearchStation.SuggestionFacility;
 import org.chromium.chrome.test.transit.page.WebPageStation;
 import org.chromium.chrome.test.util.BookmarkTestUtil;
 import org.chromium.chrome.test.util.MenuUtils;
 import org.chromium.net.test.EmbeddedTestServer;
 import org.chromium.ui.base.DeviceFormFactor;
-import org.chromium.ui.test.util.ViewUtils;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.TimeoutException;
 
@@ -76,6 +59,10 @@ import java.util.concurrent.TimeoutException;
 @RunWith(ChromeJUnit4ClassRunner.class)
 @CommandLineFlags.Add({ChromeSwitches.DISABLE_FIRST_RUN_EXPERIENCE})
 @Batch(Batch.PER_CLASS)
+// Disable in Pie because search box does not get focus automatically.
+@DisableIf.Build(
+        sdk_is_greater_than = Build.VERSION_CODES.O_MR1,
+        sdk_is_less_than = Build.VERSION_CODES.Q)
 public class TabSwitcherSearchTest {
     private static final int SERVER_PORT = 13245;
     private static final String URL_PREFIX = "127.0.0.1:" + SERVER_PORT;
@@ -87,14 +74,14 @@ public class TabSwitcherSearchTest {
             ChromeTransitTestRules.autoResetCtaActivityRule();
 
     private EmbeddedTestServer mTestServer;
-    private WebPageStation mInitialPage;
+    private WebPageStation mPage;
 
     @Before
     public void setUp() {
         mTestServer =
                 TabSwitcherSearchTestUtils.setServerPortAndGetTestServer(
                         mCtaTestRule.getActivityTestRule(), SERVER_PORT);
-        mInitialPage = mCtaTestRule.startOnBlankPage();
+        mPage = mCtaTestRule.startOnBlankPage();
 
         ChromeTabbedActivity cta = mCtaTestRule.getActivity();
         CriteriaHelper.pollUiThread(cta.getTabModelSelector()::isTabStateInitialized);
@@ -109,103 +96,76 @@ public class TabSwitcherSearchTest {
     @MediumTest
     @Restriction(PHONE)
     public void testHubSearchBox_Phone() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
-        mInitialPage.openRegularTabSwitcher();
-
-        View tabSwitcher = cta.findViewById(R.id.tab_switcher_view_holder);
-        assertEquals(ViewGroup.VISIBLE, tabSwitcher.findViewById(R.id.search_box).getVisibility());
-        assertEquals(ViewGroup.GONE, tabSwitcher.findViewById(R.id.search_loupe).getVisibility());
+        RegularTabSwitcherStation tabSwitcher = mPage.openRegularTabSwitcher();
+        assertEquals(R.id.search_box, tabSwitcher.searchElement.get().getId());
     }
 
     @Test
     @MediumTest
     @Restriction(DeviceFormFactor.TABLET_OR_DESKTOP)
     public void testHubSearchLoupe_Tablet() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
-        mInitialPage.openRegularTabSwitcher();
-
-        View tabSwitcher = cta.findViewById(R.id.tab_switcher_view_holder);
-        assertEquals(ViewGroup.GONE, tabSwitcher.findViewById(R.id.search_box).getVisibility());
-        assertEquals(
-                ViewGroup.VISIBLE, tabSwitcher.findViewById(R.id.search_loupe).getVisibility());
+        RegularTabSwitcherStation tabSwitcher = mPage.openRegularTabSwitcher();
+        assertEquals(R.id.search_loupe, tabSwitcher.searchElement.get().getId());
     }
 
     @Test
     @MediumTest
     public void testZeroPrefixSuggestions() {
         List<String> urlsToOpen =
-                Arrays.asList(
+                List.of(
                         "/chrome/test/data/android/test.html",
                         "/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
-        tabSwitcherSearchStation.checkSuggestionsShown(true);
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
+        tabSwitcherSearchStation.checkSuggestionsShown();
 
         // ZPS for open tabs only shows the most recent 4 tabs.
-        verifySuggestions(urlsToOpen, /* includePrefix= */ true);
-
+        tabSwitcherSearchStation.findSuggestionsByText(urlsToOpen, URL_PREFIX);
         // Check the header text.
-        onView(withText("Last open tabs")).check(matches(isCompletelyDisplayed()));
+        tabSwitcherSearchStation.findSectionHeaderByIndexAndText(0, "Last open tabs");
     }
 
     @Test
     @MediumTest
     public void testZeroPrefixSuggestions_OpenSuggestion() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
         List<String> urlsToOpen =
-                Arrays.asList(
+                List.of(
                         "/chrome/test/data/android/test.html",
                         "/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
-        tabSwitcherSearchStation.checkSuggestionsShown(true);
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
+        tabSwitcherSearchStation.checkSuggestionsShown();
 
-        clickSuggestion(urlsToOpen.get(0), /* includePrefix= */ true);
-        CriteriaHelper.pollUiThread(
-                () -> ActivityState.RESUMED == ApplicationStatus.getStateForActivity(cta));
-        CriteriaHelper.pollUiThread(
-                () ->
-                        ActivityState.DESTROYED
-                                == ApplicationStatus.getStateForActivity(
-                                        tabSwitcherSearchStation.getActivity()));
-        CriteriaHelper.pollUiThread(
-                () -> cta.getLayoutManager().isLayoutVisible(LayoutType.BROWSING));
+        SuggestionFacility suggestion =
+                tabSwitcherSearchStation.findSuggestion(
+                        /* index= */ null,
+                        /* title= */ null,
+                        /* text= */ URL_PREFIX + urlsToOpen.get(0));
+        mPage = suggestion.openPage();
         assertEquals(
-                mCtaTestRule.getTestServer().getURL(urlsToOpen.get(0)),
-                cta.getCurrentTabModel().getCurrentTabSupplier().get().getUrl().getSpec());
+                mTestServer.getURL(urlsToOpen.get(0)),
+                mPage.loadedTabElement.get().getUrl().getSpec());
     }
 
     @Test
     @MediumTest
     public void testZeroPrefixSuggestions_OpenSameTab() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
-        List<String> urlsToOpen = Arrays.asList("/chrome/test/data/android/navigate/one.html");
+        List<String> urlsToOpen = List.of("/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
+        Tab initialTab = mPage.loadedTabElement.get();
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
-        tabSwitcherSearchStation.checkSuggestionsShown(true);
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
+        tabSwitcherSearchStation.checkSuggestionsShown();
 
-        clickSuggestion(urlsToOpen.get(0), /* includePrefix= */ true);
-        CriteriaHelper.pollUiThread(
-                () -> ActivityState.RESUMED == ApplicationStatus.getStateForActivity(cta));
-        CriteriaHelper.pollUiThread(
-                () ->
-                        ActivityState.DESTROYED
-                                == ApplicationStatus.getStateForActivity(
-                                        tabSwitcherSearchStation.getActivity()));
-        CriteriaHelper.pollUiThread(
-                () -> cta.getLayoutManager().isLayoutVisible(LayoutType.BROWSING));
-        assertEquals(
-                mCtaTestRule.getTestServer().getURL(urlsToOpen.get(0)),
-                cta.getCurrentTabModel().getCurrentTabSupplier().get().getUrl().getSpec());
+        SuggestionFacility suggestion =
+                tabSwitcherSearchStation.findSuggestion(
+                        /* index= */ null,
+                        /* title= */ null,
+                        /* text= */ URL_PREFIX + urlsToOpen.get(0));
+        mPage = suggestion.openPage();
+        assertSame(initialTab, mPage.loadedTabElement.get());
     }
 
     @Test
@@ -214,241 +174,182 @@ public class TabSwitcherSearchTest {
     public void testZeroPrefixSuggestions_IgnoresHiddenTabs() {
         ChromeTabbedActivity cta = mCtaTestRule.getActivity();
         List<String> urlsToOpen =
-                Arrays.asList(
+                List.of(
                         "/chrome/test/data/android/test.html",
                         "/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
-        tabSwitcherSearchStation.checkSuggestionsShown(true);
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
+        tabSwitcherSearchStation.checkSuggestionsShown();
 
         // ZPS for open tabs only shows the most recent 4 tabs.
-        verifySuggestions(urlsToOpen, /* includePrefix= */ true);
+        tabSwitcherSearchStation.findSuggestionsByText(urlsToOpen, URL_PREFIX);
 
         // Check the header text.
-        onView(withText("Last open tabs")).check(matches(isCompletelyDisplayed()));
+        tabSwitcherSearchStation.findSectionHeaderByIndexAndText(0, "Last open tabs");
 
-        closeSearchAndVerify();
-        TabSwitcherSearchTestUtils.launchSearchActivityFromTabSwitcherAndWaitForLoad(cta);
+        RegularTabSwitcherStation tabSwitcher =
+                tabSwitcherSearchStation.pressBackToRegularTabSwitcher(cta);
+        tabSwitcherSearchStation = tabSwitcher.openTabSwitcherSearch();
 
         // ZPS for open tabs only shows the most recent 4 tabs.
-        verifySuggestions(urlsToOpen, /* includePrefix= */ true);
+        tabSwitcherSearchStation.findSuggestionsByText(urlsToOpen, URL_PREFIX);
 
         // Check the header text.
-        onView(withText("Last open tabs")).check(matches(isCompletelyDisplayed()));
+        tabSwitcherSearchStation.findSectionHeaderByIndexAndText(0, "Last open tabs");
     }
 
     @Test
     @MediumTest
     public void testZeroPrefixSuggestions_Incognito() {
-        List<String> urlsToOpen = Arrays.asList("/chrome/test/data/android/navigate/one.html");
+        List<String> urlsToOpen = List.of("/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.createIncognitoTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.createIncognitoTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openIncognitoTabSwitcher()
-                        .openTabSwitcherSearch();
-        tabSwitcherSearchStation.checkSuggestionsShown(false);
+                mPage.openIncognitoTabSwitcher().openTabSwitcherSearch();
+        tabSwitcherSearchStation.checkSuggestionsNotShown();
     }
 
     @Test
     @LargeTest
     public void testZeroPrefixSuggestions_duplicateUrls() {
         List<String> urlsToOpen =
-                Arrays.asList(
+                List.of(
                         "/chrome/test/data/android/test.html",
                         "/chrome/test/data/android/test.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
-        tabSwitcherSearchStation.checkSuggestionsShown(true);
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
+        tabSwitcherSearchStation.checkSuggestionsShown();
 
         // Tab URLs will be de-duped.
-        verifySuggestions(urlsToOpen, /* includePrefix= */ true);
+        tabSwitcherSearchStation.findSuggestionsByText(urlsToOpen, URL_PREFIX);
     }
 
     @Test
     @MediumTest
     public void testTypedSuggestions() {
-        List<String> urlsToOpen = Arrays.asList("/chrome/test/data/android/navigate/one.html");
+        List<String> urlsToOpen = List.of("/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
         tabSwitcherSearchStation.typeInOmnibox("one.html");
-        tabSwitcherSearchStation.checkSuggestionsShown(true);
-
-        verifySuggestions(urlsToOpen, /* includePrefix= */ true);
+        tabSwitcherSearchStation.checkSuggestionsShown();
+        tabSwitcherSearchStation.findSuggestionsByText(urlsToOpen, URL_PREFIX);
     }
 
     @Test
     @MediumTest
     public void testTypedSuggestions_OpenSuggestion() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
         List<String> urlsToOpen =
-                Arrays.asList(
+                List.of(
                         "/chrome/test/data/android/test.html",
                         "/chrome/test/data/android/test.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
         tabSwitcherSearchStation.typeInOmnibox("test.html");
-        tabSwitcherSearchStation.waitForSuggestionAtIndexWithTitleText(0, "android/test.html");
-
-        clickSuggestion(urlsToOpen.get(0), /* includePrefix= */ true);
-        CriteriaHelper.pollUiThread(
-                () -> ActivityState.RESUMED == ApplicationStatus.getStateForActivity(cta));
-        CriteriaHelper.pollUiThread(
-                () ->
-                        ActivityState.DESTROYED
-                                == ApplicationStatus.getStateForActivity(
-                                        tabSwitcherSearchStation.getActivity()));
-        CriteriaHelper.pollUiThread(
-                () -> cta.getLayoutManager().isLayoutVisible(LayoutType.BROWSING));
-        assertEquals(
-                mCtaTestRule.getTestServer().getURL(urlsToOpen.get(0)),
-                cta.getCurrentTabModel().getCurrentTabSupplier().get().getUrl().getSpec());
+        SuggestionFacility suggestion =
+                tabSwitcherSearchStation.findSuggestion(
+                        /* index= */ 0,
+                        /* title= */ URL_PREFIX + "/chrome/test/data/android/test.html",
+                        /* text= */ URL_PREFIX + "/chrome/test/data/android/test.html");
+        suggestion.openPage();
     }
 
     @Test
     @MediumTest
     public void testTypedSuggestions_OpenSameTab() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
-        List<String> urlsToOpen = Arrays.asList("/chrome/test/data/android/navigate/one.html");
+        List<String> urlsToOpen = List.of("/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
+        Tab initialTab = mPage.loadedTabElement.get();
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
         tabSwitcherSearchStation.typeInOmnibox("one.html");
-        tabSwitcherSearchStation.waitForSuggestionAtIndexWithTitleText(0, "One");
-
-        clickSuggestion(urlsToOpen.get(0), /* includePrefix= */ true);
-        CriteriaHelper.pollUiThread(
-                () -> ActivityState.RESUMED == ApplicationStatus.getStateForActivity(cta));
-        CriteriaHelper.pollUiThread(
-                () ->
-                        ActivityState.DESTROYED
-                                == ApplicationStatus.getStateForActivity(
-                                        tabSwitcherSearchStation.getActivity()));
-        CriteriaHelper.pollUiThread(
-                () -> cta.getLayoutManager().isLayoutVisible(LayoutType.BROWSING));
-        assertEquals(
-                mCtaTestRule.getTestServer().getURL(urlsToOpen.get(0)),
-                cta.getCurrentTabModel().getCurrentTabSupplier().get().getUrl().getSpec());
+        SuggestionFacility suggestion =
+                tabSwitcherSearchStation.findSuggestion(
+                        /* index= */ 0,
+                        /* title= */ "One",
+                        /* text= */ URL_PREFIX + urlsToOpen.get(0));
+        mPage = suggestion.openPage();
+        assertEquals("One", mPage.loadedTabElement.get().getTitle());
+        assertSame(initialTab, mPage.loadedTabElement.get());
     }
 
     @Test
     @MediumTest
     public void testTypedSuggestions_OpenSuggestionWithEnter() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
         List<String> urlsToOpen =
-                Arrays.asList(
+                List.of(
                         "/chrome/test/data/android/navigate/one.html",
                         "/chrome/test/data/android/test.html");
+        mPage = Journeys.prepareRegularTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.prepareRegularTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openRegularTabSwitcher()
-                        .openTabSwitcherSearch();
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
         tabSwitcherSearchStation.typeInOmnibox("one.html");
-        tabSwitcherSearchStation.waitForSuggestionAtIndexWithTitleText(0, "One");
-        tabSwitcherSearchStation.pressEnter();
-
-        CriteriaHelper.pollUiThread(
-                () -> ActivityState.RESUMED == ApplicationStatus.getStateForActivity(cta));
-        CriteriaHelper.pollUiThread(
-                () ->
-                        ActivityState.DESTROYED
-                                == ApplicationStatus.getStateForActivity(
-                                        tabSwitcherSearchStation.getActivity()));
-        CriteriaHelper.pollUiThread(
-                () -> cta.getLayoutManager().isLayoutVisible(LayoutType.BROWSING));
+        SuggestionFacility suggestion =
+                tabSwitcherSearchStation.findSuggestion(
+                        /* index= */ 0, /* title= */ "One", /* text= */ null);
+        mPage = suggestion.openPagePressingEnter();
+        assertEquals("One", mPage.loadedTabElement.get().getTitle());
     }
 
     @Test
     @MediumTest
     public void testTypedSuggestions_Incognito() {
-        List<String> urlsToOpen = Arrays.asList("/chrome/test/data/android/navigate/one.html");
+        List<String> urlsToOpen = List.of("/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.createIncognitoTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.createIncognitoTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openIncognitoTabSwitcher()
-                        .openTabSwitcherSearch();
+                mPage.openIncognitoTabSwitcher().openTabSwitcherSearch();
         tabSwitcherSearchStation.typeInOmnibox("one.html");
-        tabSwitcherSearchStation.waitForSuggestionAtIndexWithTitleText(0, "One");
-
-        verifySuggestions(urlsToOpen, /* includePrefix= */ true);
+        tabSwitcherSearchStation.findSuggestion(
+                /* index= */ 0, /* title= */ "One", /* text= */ URL_PREFIX + urlsToOpen.get(0));
     }
 
     @Test
     @MediumTest
     public void testSearchActivityBackButton() {
-        mInitialPage.openRegularTabSwitcher().openTabSwitcherSearch();
-        closeSearchAndVerify();
+        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
+        mPage.openRegularTabSwitcher().openTabSwitcherSearch().pressBackToRegularTabSwitcher(cta);
+    }
+
+    @Test
+    @MediumTest
+    public void testSearchActivityBackButton_Incognito() {
+        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
+        mPage.openNewIncognitoTabFast()
+                .openIncognitoTabSwitcher()
+                .openTabSwitcherSearch()
+                .pressBackToIncognitoTabSwitcher(cta);
     }
 
     @Test
     @MediumTest
     public void testTypedSuggestions_OpenSearchSuggestion() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                mInitialPage.openRegularTabSwitcher().openTabSwitcherSearch();
+                mPage.openRegularTabSwitcher().openTabSwitcherSearch();
         tabSwitcherSearchStation.typeInOmnibox("foobar");
-        tabSwitcherSearchStation.waitForSectionAtIndexWithText(0, "Search the web");
-        tabSwitcherSearchStation.waitForSuggestionAtIndexWithTitleText(1, "foobar");
-
-        clickSuggestion("foobar", /* includePrefix= */ false);
-        CriteriaHelper.pollUiThread(
-                () -> ActivityState.RESUMED == ApplicationStatus.getStateForActivity(cta));
-        CriteriaHelper.pollUiThread(
-                () ->
-                        ActivityState.DESTROYED
-                                == ApplicationStatus.getStateForActivity(
-                                        tabSwitcherSearchStation.getActivity()));
-        CriteriaHelper.pollUiThread(
-                () -> cta.getLayoutManager().isLayoutVisible(LayoutType.BROWSING));
-
-        TabModel currentTabModel = cta.getCurrentTabModel();
-        Tab currentTab = currentTabModel.getCurrentTabSupplier().get();
-        assertTrue(currentTab.getUrl().getSpec().contains("foobar"));
-        assertFalse(currentTabModel.isOffTheRecord());
+        tabSwitcherSearchStation.findSectionHeaderByIndexAndText(0, "Search the web");
+        SuggestionFacility suggestion =
+                tabSwitcherSearchStation.findSuggestion(
+                        /* index= */ 1, /* title= */ "foobar", /* text= */ null);
+        mPage = suggestion.openPage();
+        assertFalse(mPage.isIncognito());
     }
 
     @Test
     @MediumTest
     public void testTypedSuggestions_OpenSearchSuggestion_Incognito() {
-        ChromeTabbedActivity cta = mCtaTestRule.getActivity();
-        List<String> urlsToOpen = Arrays.asList("/chrome/test/data/android/navigate/one.html");
+        List<String> urlsToOpen = List.of("/chrome/test/data/android/navigate/one.html");
+        mPage = Journeys.createIncognitoTabsWithWebPages(mPage, mTestServer.getURLs(urlsToOpen));
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                Journeys.createIncognitoTabsWithWebPages(
-                                mInitialPage, mTestServer.getURLs(urlsToOpen))
-                        .openIncognitoTabSwitcher()
-                        .openTabSwitcherSearch();
+                mPage.openIncognitoTabSwitcher().openTabSwitcherSearch();
         tabSwitcherSearchStation.typeInOmnibox("foobar");
-        tabSwitcherSearchStation.waitForSectionAtIndexWithText(0, "Search the web");
-        tabSwitcherSearchStation.waitForSuggestionAtIndexWithTitleText(1, "foobar");
-
-        clickSuggestion("foobar", /* includePrefix= */ false);
-        CriteriaHelper.pollUiThread(
-                () -> ActivityState.RESUMED == ApplicationStatus.getStateForActivity(cta));
-        CriteriaHelper.pollUiThread(
-                () ->
-                        ActivityState.DESTROYED
-                                == ApplicationStatus.getStateForActivity(
-                                        tabSwitcherSearchStation.getActivity()));
-        CriteriaHelper.pollUiThread(
-                () -> cta.getLayoutManager().isLayoutVisible(LayoutType.BROWSING));
-        TabModel currentTabModel = cta.getCurrentTabModel();
-        Tab currentTab = currentTabModel.getCurrentTabSupplier().get();
-        assertTrue(currentTab.getUrl().getSpec().contains("foobar"));
-        assertTrue(currentTabModel.isOffTheRecord());
+        tabSwitcherSearchStation.findSectionHeaderByIndexAndText(0, "Search the web");
+        SuggestionFacility suggestion =
+                tabSwitcherSearchStation.findSuggestion(
+                        /* index= */ 1, /* title= */ "foobar", /* text= */ null);
+        mPage = suggestion.openPage();
+        assertTrue(mPage.isIncognito());
     }
 
     @Test
@@ -457,8 +358,7 @@ public class TabSwitcherSearchTest {
     // TODO(crbug.com/394401323): Add some PT station for searching bookmarks.
     public void testBookmarkSuggestions() {
         WebPageStation openPage =
-                mInitialPage
-                        .openNewTabFast()
+                mPage.openNewTabFast()
                         .loadWebPageProgrammatically(
                                 mTestServer.getURL("/chrome/test/data/android/navigate/one.html"));
         BookmarkTestUtil.waitForBookmarkModelLoaded();
@@ -475,8 +375,9 @@ public class TabSwitcherSearchTest {
                         .openRegularTabSwitcher()
                         .openTabSwitcherSearch();
         tabSwitcherSearchStation.typeInOmnibox("one.html");
-        tabSwitcherSearchStation.waitForSectionAtIndexWithText(0, "Bookmarks");
-        tabSwitcherSearchStation.waitForSuggestionAtIndexWithTitleText(1, "One");
+        tabSwitcherSearchStation.findSectionHeaderByIndexAndText(0, "Bookmarks");
+        tabSwitcherSearchStation.findSuggestion(
+                /* index= */ 1, /* title= */ "One", /* text= */ null);
     }
 
     @Test
@@ -484,8 +385,7 @@ public class TabSwitcherSearchTest {
     // TODO(crbug.com/394401463): Add some PT station for searching history.
     public void testHistorySuggestions() throws TimeoutException {
         TabSwitcherSearchStation tabSwitcherSearchStation =
-                mInitialPage
-                        .openNewTabFast()
+                mPage.openNewTabFast()
                         .loadWebPageProgrammatically(
                                 mTestServer.getURL("/chrome/test/data/android/navigate/one.html"))
                         .loadWebPageProgrammatically(
@@ -530,47 +430,8 @@ public class TabSwitcherSearchTest {
         helper.waitForNext();
 
         tabSwitcherSearchStation.typeInOmnibox("One");
-        tabSwitcherSearchStation.waitForSectionAtIndexWithText(0, "History");
-        tabSwitcherSearchStation.waitForSuggestionAtIndexWithTitleText(1, "One");
-    }
-
-    private void closeSearchAndVerify() {
-        // Click the back button which is setup as the status view icon.
-        onView(withId(R.id.location_bar_status)).perform(click());
-
-        // Check that the tab switcher is now fully showing again.
-        onView(
-                        allOf(
-                                isDescendantOfA(
-                                        withId(
-                                                getTabSwitcherAncestorId(
-                                                        mCtaTestRule.getActivity()))),
-                                withId(R.id.tab_list_recycler_view)))
-                .check(matches(isCompletelyDisplayed()));
-    }
-
-    private void verifySuggestions(List<String> suggestionUrls, boolean includePrefix) {
-        for (int i = 0; i < suggestionUrls.size(); i++) {
-            String url = adjustUrl(suggestionUrls.get(i), includePrefix);
-            findMatchWithTextAndId(url, includePrefix ? R.id.line_2 : R.id.line_1)
-                    .check(matches(isDisplayed()));
-        }
-    }
-
-    private void clickSuggestion(String url, boolean includePrefix) {
-        url = adjustUrl(url, includePrefix);
-        findMatchWithTextAndId(url, includePrefix ? R.id.line_2 : R.id.line_1).perform(click());
-    }
-
-    private ViewInteraction findMatchWithTextAndId(String text, int id) {
-        return ViewUtils.onViewWaiting(
-                allOf(withId(id), withText(text), withEffectiveVisibility(Visibility.VISIBLE)));
-    }
-
-    private String adjustUrl(String url, boolean includePrefix) {
-        if (includePrefix) {
-            return URL_PREFIX + url;
-        }
-        return url;
+        tabSwitcherSearchStation.findSectionHeaderByIndexAndText(0, "History");
+        tabSwitcherSearchStation.findSuggestion(
+                /* index= */ 1, /* title= */ "One", /* text= */ null);
     }
 }
